--- a/index.html
+++ b/index.html
@@ -176,7 +176,8 @@
             <a href="#" class="footer__link"><i class="uil uil-twitter-alt"></i></a>
         </div>
         <div class="footer__info">
-            <p>Designed and developed by <a href="/" style="text-decoration: underline;">Dhruv Chauhan</a></p>
+            <p>Designed and developed by <a href="http://dhruv-chauhan.com/" style="text-decoration: underline;">Dhruv
+                    Chauhan</a></p>
         </div>
     </footer>
 </body>
